--- a/Jesse&Martti/Visualiser.ipynb
+++ b/Jesse&Martti/Visualiser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "c39418ff",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "820c9d62",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "9594bce7",
    "metadata": {},
    "outputs": [
@@ -77,10 +77,10 @@
      "output_type": "stream",
      "text": [
       "Row 0 Row 1 Row 2 Row 3 \n",
-      "\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[92m█\u001b[94m█\u001b[94m█\u001b[91m█ \u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \n",
-      "\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[92m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[91m█ \u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \n",
-      "\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[92m█\u001b[92m█\u001b[94m█\u001b[94m█\u001b[92m█ \u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \n",
-      "\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[94m█\u001b[94m█\u001b[91m█\u001b[92m█\u001b[92m█ \u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \n",
+      "\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \u001b[91m█\u001b[92m█\u001b[92m█\u001b[94m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \n",
+      "\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \u001b[92m█\u001b[94m█\u001b[92m█\u001b[92m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \n",
+      "\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \u001b[94m█\u001b[94m█\u001b[91m█\u001b[94m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \n",
+      "\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█\u001b[92m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[91m█\u001b[91m█ \u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█\u001b[94m█ \u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█\u001b[91m█ \n",
       "\u001b[91mPriority 1:█\n",
       "\u001b[94mPriority 2:█\n",
       "\u001b[92mPriority 3:█\n",
@@ -89,17 +89,40 @@
     }
    ],
    "source": [
-    "filename = input(\"Select file you'd like to demo: \")\n",
+    "import os\n",
+    "print(\"Select folder you'd want to view:\")\n",
+    "folders = next(os.walk(\"Observations\"))[1]\n",
+    "for i,val in enumerate(folders):\n",
+    "    print(\"%i: %s\"%(i,val))\n",
     "\n",
-    "file = np.load(\"Observations/array%s.npy\"%filename)\n",
+    "folderselection = input(\"Type the number here:\")\n",
+    "\n",
+    "clear_output(wait=True)\n",
+    "\n",
+    "files = next(os.walk(\"Observations/\"+folders[int(folderselection)]))[2]\n",
+    "files.sort()\n",
+    "for i,val in enumerate(files):\n",
+    "    print(\"%i: %s\"%(i,val))\n",
+    "\n",
+    "print(\"Select file you'd like to demo:\")\n",
+    "filename = input()\n",
+    "print(files[int(filename)])\n",
+    "#input()\n",
+    "file = np.load(\"Observations/\"+folders[int(folderselection)]+\"/\"+files[int(filename)])\n",
     "\n",
     "renderAnimation(file)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8f0fdc4",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8891ef",
+   "id": "e746b23e",
    "metadata": {},
    "outputs": [],
    "source": []
