--- a/Score Functie Ding.ipynb
+++ b/Score Functie Ding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "2630cf1a",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "e1b23337",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "bf40ed6a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "d80da8ea",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "8b94ba26",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        " [3, 3, 2])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "d01356ea",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "id": "08e0fa38",
    "metadata": {},
    "outputs": [
@@ -162,52 +162,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['1' '2']\n",
-      "  ['1' '1']\n",
-      "  ['2' '2']]]\n",
-      "container: 0, routes: ({0: '1', 1: '2'}, {0: '1', 1: '2', 2: '1', 3: '1', 4: '2', 5: '2'})\n",
-      "-----------------\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'dict_keys' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [46], line 36\u001b[0m\n\u001b[1;32m     33\u001b[0m r2 \u001b[38;5;241m=\u001b[39m rs[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m#print(route_info(r1))\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m#print(route_info(r2))\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mscore_eindveld\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlot\u001b[49m\u001b[43m,\u001b[49m\u001b[43mlotsize\u001b[49m\u001b[43m)\u001b[49m))\n",
-      "Cell \u001b[0;32mIn [45], line 84\u001b[0m, in \u001b[0;36mscore_eindveld\u001b[0;34m(lot_indeling, lot_size)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;66;03m#kies tweede route als aantal dezelfe prio klasse containers meer is dan eerste\u001b[39;00m\n\u001b[1;32m     81\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     82\u001b[0m         shortroute \u001b[38;5;241m=\u001b[39m routes[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m---> 84\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcontainer: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mshortroute\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m,p))\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbeste route: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(shortroute))\n\u001b[1;32m     87\u001b[0m \u001b[38;5;66;03m#sla alle containers op die op de route in de weg zitten (de containers met een hogere prioklasse)\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict_keys' object is not subscriptable"
+      "[[['1' '3']\n",
+      "  ['2' '2']\n",
+      "  ['1' '3']]\n",
+      "\n",
+      " [['1' '3']\n",
+      "  ['2' '2']\n",
+      "  ['1' '3']]\n",
+      "\n",
+      " [['1' '3']\n",
+      "  ['2' '2']\n",
+      "  ['1' '3']]]\n",
+      "container: 0, routes: ({0: '1', 1: '3'}, {0: '1', 1: '3', 2: '2', 3: '2', 4: '1', 5: '3'})\n",
+      "-----------------\n",
+      "score: 12\n"
      ]
     }
    ],
    "source": [
-    "lotsize = [1,3,2]\n",
+    "lotsize = [3,3,2]\n",
     "def vulenv(lot, index, prio):\n",
     "    act_loc = ind_to_coord(index, lotsize)\n",
     "    new_lot = AddContainer(lot, lotsize, prio, act_loc[0], act_loc[1], act_loc[2])\n",
     "    return new_lot\n",
     "\n",
     "lot = generateEnvironment(lotsize)[0]\n",
+    "#for i in range()\n",
     "lot = vulenv(lot, 0, 1)\n",
-    "lot = vulenv(lot, 1, 2)\n",
-    "lot = vulenv(lot, 2, 1)\n",
-    "lot = vulenv(lot, 3, 1)\n",
-    "lot = vulenv(lot, 4, 2)\n",
-    "lot = vulenv(lot, 5, 2)\n",
-    "# lot = vulenv(lot, 6, 0)\n",
-    "# lot = vulenv(lot, 7, 0)\n",
-    "# lot = vulenv(lot, 8, 0)\n",
-    "# lot = vulenv(lot, 9, 3)\n",
-    "# lot = vulenv(lot, 10, 2)\n",
-    "# lot = vulenv(lot, 11, 1)\n",
-    "# lot = vulenv(lot, 12, 1)\n",
-    "# lot = vulenv(lot, 13, 1)\n",
-    "# lot = vulenv(lot, 14, 2)\n",
-    "# lot = vulenv(lot, 15, 2)\n",
-    "# lot = vulenv(lot, 16, 3)\n",
-    "# lot = vulenv(lot, 17, 3)\n",
+    "lot = vulenv(lot, 1, 3)\n",
+    "lot = vulenv(lot, 2, 2)\n",
+    "lot = vulenv(lot, 3, 2)\n",
+    "lot = vulenv(lot, 4, 1)\n",
+    "lot = vulenv(lot, 5, 3)\n",
+    "lot = vulenv(lot, 6, 1)\n",
+    "lot = vulenv(lot, 7, 3)\n",
+    "lot = vulenv(lot, 8, 2)\n",
+    "lot = vulenv(lot, 9, 2)\n",
+    "lot = vulenv(lot, 10, 1)\n",
+    "lot = vulenv(lot, 11, 3)\n",
+    "lot = vulenv(lot, 12, 1)\n",
+    "lot = vulenv(lot, 13, 3)\n",
+    "lot = vulenv(lot, 14, 2)\n",
+    "lot = vulenv(lot, 15, 2)\n",
+    "lot = vulenv(lot, 16, 1)\n",
+    "lot = vulenv(lot, 17, 3)\n",
     "print(lot)\n",
     "\n",
     "idc = 0\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "e7d9db60",
    "metadata": {},
    "outputs": [],
@@ -281,7 +279,7 @@
     "    \n",
     "    #beloon 0 rijen alleen bij een X >= 1, Y >= 3, Z >= 1\n",
     "    \n",
-    "    \n",
+    "    inbox = 0\n",
     "    for p in lot_unique:\n",
     "    \n",
     "        for i in range(len(np.where(lot_indeling == p)[0])):\n",
@@ -311,18 +309,19 @@
     "                else:\n",
     "                    shortroute = routes[1]\n",
     "            \n",
-    "            print('container: {0}:{1}'.format(shortroute.keys()[0],p))\n",
-    "            print('beste route: {0}'.format(shortroute))\n",
+    "            #print('container: {0}:{1}'.format(shortroute[0],p))\n",
+    "            #print('beste route: {0}'.format(shortroute))\n",
     "\n",
     "            #sla alle containers op die op de route in de weg zitten (de containers met een hogere prioklasse)\n",
     "            for c in shortroute:\n",
     "                if int(shortroute[c]) > int(p):\n",
     "                    obstaclesdict[c] = shortroute[c]\n",
-    "            print('obstakels: {0}'.format(obstaclesdict))\n",
-    "            print('-----------------')\n",
+    "            #print('obstakels: {0}'.format(obstaclesdict))\n",
+    "            #print('-----------------')\n",
     "            \n",
     "            #score omlaag als containers in de weg zitten\n",
     "            if len(obstaclesdict) > 0:\n",
+    "                inbox += 1\n",
     "                for o in obstaclesdict:\n",
     "                    score = score - (int(obstaclesdict[o]) - int(p)) \n",
     "                    #score gebaseerd op prio index van de blokkerende container, AANPASBAAR\n",
@@ -332,7 +331,7 @@
     "                score += ((Y*Z)/2) \n",
     "                #score gebaseerd op lotsize, AANPASBAAR\n",
     "    \n",
-    "    return score #score: integer"
+    "    return inbox #score: integer"
    ]
   },
   {
