--- a/Jesse&Martti/DQN V4 Row EnvironmentCompare.ipynb
+++ b/Jesse&Martti/DQN V4 Row EnvironmentCompare.ipynb
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "effa4de5",
+   "id": "7cf87c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5ea454e9",
+   "id": "019db675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "id": "46f74f36",
    "metadata": {},
    "outputs": [
@@ -723,8 +723,8 @@
     "x = np.arange(len(labels))\n",
     "fig, (ax1,ax2) = plt.subplots(ncols=2,layout=\"constrained\")\n",
     "\n",
-    "ax1.set_title(\"Average boxed in containers\")\n",
-    "ax1.set_ylabel(\"Amount of boxed in containers (Lower is better)\")\n",
+    "ax1.set_title(\"Gemiddelde ingeboxte containers\")\n",
+    "ax1.set_ylabel(\"Hoeveelheid ingeboxte containers (Lager is beter)\")\n",
     "ax1.bar(0,np.array(compareScoresInbox[0]).mean(),width,label = \"Neural Network\")\n",
     "ax1.bar(1,np.array(compareScoresInbox[1]).mean(),width,label = \"Random Choice\")\n",
     "ax1.set_xticks(x, labels)\n",
@@ -736,7 +736,7 @@
     "ax2.bar(1,np.array(compareScores[1]).mean(),width,label = \"Random Choice\")\n",
     "ax2.set_xticks(x, labels)\n",
     "ax2.legend(loc=\"lower center\")\n",
-    "\n",
+    "plt.savefig('Resultaten.png',dpi=300)\n",
     "plt.show()"
    ]
   },
